# perfume-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docker/: Dockerfile.api  Dockerfile.bot  Dockerfile.worker
fixtures/html/: letuagl_product.html  notino_product.html  randewoo_product.html  zolotoe_yabloko_product.html
migrations/: env.py
migrations/versions/: 001_create_categories_notes.py  002_create_perfumes.py  003_create_shops_offers.py  004_create_users_favorites.py
perfume_bot/api/: main.py
perfume_bot/bot/: keyboards.py  main.py  states.py
perfume_bot/core/: config.py  database.py  redis.py
perfume_bot/llm/: provider.py
perfume_bot/models/: __init__.py  favorite.py  perfume.py  shop.py  user.py
perfume_bot/scrapers/: base.py  letuagl.py  notino.py  randewoo.py  zolotoe_yabloko.py
perfume_bot/services/: favorites.py  notification.py  recommendation.py
perfume_bot/workers/: app.py  catalog_updater.py  notifier.py  price_checker.py
scripts/: seed_catalog.py  setup_server.sh  start.sh
specs/001-perfume-advisor-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/contract/: test_letuagl.py  test_notino.py  test_randewoo.py  test_zolotoe_yabloko.py
tests/integration/: test_favorites_service.py  test_price_checker.py  test_recommendation_service.py
(+11 files in other folders)
