[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfume-bot"
version = "0.1.0"
description = "Telegram-бот для подбора духов по ароматическим нотам"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "pydantic-settings>=2.3",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["perfume_bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["perfume_bot"]
omit = ["*/migrations/*", "*/scripts/*"]
